--- a/my/.htaccess
+++ b/my/.htaccess
@@ -1,3 +1,4 @@
 
+
 RewriteEngine On
-RewriteRule /recover/([0-9]*)/([0-9a-fA-F]*) lost.php?id=$1&key=$2 [L]
+RewriteRule recover/([0-9]*)/([0-9a-fA-F]*) lost.php?id=$1&key=$2 [L]
